2011-11-13:
    * version 1.1
    * Compatible with newer Thunderbirds
    * Fixed :contact and :contacts commands to work with newer Thunderbirds
    * Inherited newly designed Mode display from Vimperator
    * Fix ":compose -attachment"

2011-06-13
    * version 1.0
    * IMPORTANT: With the redesign of Vimperator for version 3.0 lots of things have
      changed also for Muttator. Please read Vimperator's release notes as well this time.
    * IMPORTANT: It is possible to yank more fields now, but it destroys previous key bindings.
      [m]yf[m] or [m]yy[m] to copy "From:"
      [m]ys[m] to copy Subject
      [m]y#[m] to copy Message ID
      [m]yt[m] to copy "To:"
      [m]yr[m] to copy recipients, To: + Cc:
      [m]yu[m] to copy URL of feed (only for RSS)
    * IMPORTANT: 'c' has been changed to 'o' for quickly opening folders
    * IMPORTANT: 'i' has been changed to 'm' to go into MESSAGE mode
    * IMPORTANT: Passthrough mode has been changed (just like in Vimperator)
      to 'i' for a single key and Shift-Esc for all keys
    * We no longer enter MESSAGE mode automatically after focus changes,
      use 'm' (and Esc) to enter/exit this mode.
    * Fix moving of more than one message with :moveto
    * add l1,l2,...,l5 to directly tag a message with the 1st, 2nd, ... tag
    * Fix ctrl-shift-n/p going to next/prev unread folder (thanks temerako)
    * fix all l* (label read/starred/etc.) mappings for new Thunderbirds
    * add ":dialog accounts" to open Thunderbird's account manager
    * change archive action (<C-s>) to use Thunderbird3 default feature
    * remove "archivefolder" option
    * Support rich text editor written by HTML.
      mode is into editing mode (INSERT, TEXTAREA, VISUAL) if the focused window is editable.
      And update map [m]i[m]: into be editing mode if editable otherwise MESSAGE mode.
    * enable to edit a HTML message on HTML compose mode.
    * new 'foldermode' option to change folder panel view.